# mlyt

./: README.md  app.py  application.py  main.py  pyproject.toml  requirements.txt  setup.py  template.py
.ebextensions/: python.config
.github/workflows/: main.yaml
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb
src/mlProject/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/mlProject/config/: configuration.py
src/mlProject/pipeline/: stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
templates/: results.html
